name:                rosmsg
version:             0.1.0.0
synopsis:            ROS message parser/generator for Haskell
description:         Please see README.md
homepage:            https://github.com/akru/rosmsg#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          Alexander Krupenkin <mail@akru.me>
copyright:           2016 Alexander Krupenkin
category:            Robotics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Robotics.ROS.Msg
                     , Robotics.ROS.Msg.TH
                     , Robotics.ROS.Msg.Parser
  build-depends:       base                 >= 4.7    && < 5
                     , text                 >= 1.2    && < 2
                     , binary               >= 0.7    && < 1
                     , attoparsec           >= 0.13   && < 1
                     , scientific           >= 0.3    && < 1
                     , lens-simple
                     , pureMD5

  other-modules:       Robotics.ROS.Msg.Types
  default-language:    Haskell2010

executable parseFile
  hs-source-dirs:      test
  main-is:             parseFile.hs
  build-depends:       base
                     , rosmsg
                     , text >= 1.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite rosmsg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rosmsg
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akru/rosmsg
