name:                rosmsg
version:             0.2.0.0
synopsis:            ROS message parser, render, TH
description:         Please see README.md
homepage:            https://github.com/akru/rosmsg#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           (c) 2016 Alexander Krupenkin
category:            Robotics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Robotics.ROS.Msg
                     , Robotics.ROS.Msg.TH
                     , Robotics.ROS.Msg.Parser
                     , Robotics.ROS.Msg.Render
  build-depends:       base                 >= 4.7    && < 5
                     , text                 >= 1.2    && < 2
                     , binary               >= 0.7    && < 1
                     , pureMD5              >= 2.1    && < 3
                     , attoparsec           >= 0.13   && < 1
                     , data-default         >= 0.5    && < 1
                     , template-haskell     >= 2.10   && < 3

  other-modules:       Robotics.ROS.Msg.Types
                     , Robotics.ROS.Msg.ROSArray
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings

test-suite rosmsg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary
                     , pureMD5
                     , bytestring
                     , data-default
                     , rosmsg
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-splices
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akru/rosmsg
